now we are using the mercado libre api to list products

--- a/res/layout/mainproduct_view.xml
+++ b/res/layout/mainproduct_view.xml
@@ -9,13 +9,14 @@
     tools:context="com.example.subastaya.AuctionActivity$PlaceholderFragment" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/productTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="24dp"
-        android:text="Name of the product" />
-
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="40dp"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+    
 </RelativeLayout>
