--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -14,7 +14,8 @@
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+        <item name="android:windowBackground">@color/window_background</item>
+    	<item name="android:colorBackground">@color/window_background</item>
     </style>
 
 </resources>
