--- a/res/layout/offerform_view.xml
+++ b/res/layout/offerform_view.xml
@@ -12,6 +12,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="35dp"
+        android:onClick="offer"
         android:text="Ofertar" />
     
 </RelativeLayout>
