--- a/res/layout/offerform_view.xml
+++ b/res/layout/offerform_view.xml
@@ -1,13 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"    
-    android:background="@color/bottom_form_color"
+    android:layout_height="match_parent"
     tools:context="com.example.subastaya.AuctionActivity$PlaceholderFragment" >
 
     <Button
         android:id="@+id/offer"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
