--- a/res/layout/mainproduct_view.xml
+++ b/res/layout/mainproduct_view.xml
@@ -1,22 +1,89 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.subastaya.AuctionActivity$PlaceholderFragment" >
-
-    <TextView
-        android:id="@+id/productTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="40dp"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-    
-</RelativeLayout>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+	    xmlns:tools="http://schemas.android.com/tools"
+    	android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+    >
+	<RelativeLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:paddingBottom="@dimen/activity_vertical_margin"
+	    android:paddingLeft="@dimen/activity_horizontal_margin"
+	    android:paddingRight="@dimen/activity_horizontal_margin"
+	    android:paddingTop="@dimen/activity_vertical_margin"
+	    android:scrollbarAlwaysDrawVerticalTrack="false"
+	    android:scrollbars="vertical|none"
+	    tools:context="com.example.subastaya.AuctionActivity$PlaceholderFragment" >
+	    
+	    <fragment android:name="com.example.subastaya.LoadingFragment"
+	              android:id="@+id/loading_fragment"
+	              android:visibility="gone"
+	              android:layout_width="match_parent"
+	              android:layout_height="match_parent" />
+	
+	    <TextView
+	        android:id="@+id/productTitle"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentLeft="true"
+	        android:layout_alignParentTop="true"
+	        android:layout_toLeftOf="@+id/price"
+	        android:text="Entrade de los Scones de la Chola (nuevo)"
+	        android:textAppearance="?android:attr/textAppearanceLarge" />
+	
+	    <ImageView
+	        android:id="@+id/imageView1"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/productTitle"
+	        android:layout_centerHorizontal="true"
+	        android:layout_marginTop="162dp" />
+	
+	    <!--<DigitalClock
+	        android:id="@+id/digitalClock1"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_above="@+id/imageView1"
+	        android:layout_marginLeft="20dp"
+	        android:layout_toRightOf="@+id/imageView1"
+	        android:text="DigitalClock" />-->
+	
+	    <TextView
+	        android:id="@+id/price"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentBottom="false"
+	        android:layout_alignParentEnd="false"
+	        android:layout_alignParentRight="true"
+	        android:layout_alignParentStart="false"
+	        android:layout_alignParentTop="false"
+	        android:layout_alignWithParentIfMissing="false"
+	        android:layout_centerHorizontal="false"
+	        android:layout_centerInParent="false"
+	        android:layout_centerVertical="false"
+	        android:text="$ 15.40"
+	        android:textAppearance="?android:attr/textAppearanceLarge" />
+	
+	    <TextView
+	        android:id="@+id/timeRemaining"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignRight="@+id/price"
+	        android:layout_below="@id/price"
+	        android:layout_marginBottom="15dp"
+	        android:paddingTop="15dp"
+	        android:text="12:34:01"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	        android:textColor="@android:color/holo_blue_light" />
+	
+	    <TextView
+	        android:id="@+id/description"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/imageView1"
+	        android:layout_centerHorizontal="true"
+	        android:layout_marginTop="19dp"
+	        android:text="El rpoducto este es muy copado, si muy copado la verdad. bocha de cosas ahce, apofjwoiceo e ndv nds njdn kdn kdnv knv kfn kfn kenkn ksdn ken kdn kdsn kndsk ndk ndks nksdn dks fnksd nksdn kdj nskdj nffddf  ."
+	        android:textAppearance="?android:attr/textAppearanceSmall" />
+	    
+	</RelativeLayout>
+</ScrollView>
