--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <color name="green_button">#26b178</color>
     <color name="window_background">#f6f6f6</color>
  	<color name="bottom_form_color">#bdbdbd</color>
  	<color name="light_blue">#33b5e5</color>
