--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -50,8 +50,10 @@
         android:layout_below="@+id/query"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="38dp"
+        android:background="@android:color/holo_blue_light"
         android:onClick="search"
-        android:text="Buscar" />
+        android:text="Buscar"
+        android:textColor="@android:color/background_light" />
 
     <TextView
         android:id="@+id/loggedIn"
