--- a/res/layout/mainproduct_view.xml
+++ b/res/layout/mainproduct_view.xml
@@ -1,8 +1,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-	    xmlns:tools="http://schemas.android.com/tools"
-    	android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
+
 	<RelativeLayout 
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
@@ -13,12 +13,6 @@
 	    android:scrollbarAlwaysDrawVerticalTrack="false"
 	    android:scrollbars="vertical|none"
 	    tools:context="com.example.subastaya.AuctionActivity$PlaceholderFragment" >
-	    
-	    <fragment android:name="com.example.subastaya.LoadingFragment"
-	              android:id="@+id/loading_fragment"
-	              android:visibility="gone"
-	              android:layout_width="match_parent"
-	              android:layout_height="match_parent" />
 	
 	    <TextView
 	        android:id="@+id/productTitle"
@@ -27,25 +21,28 @@
 	        android:layout_alignParentLeft="true"
 	        android:layout_alignParentTop="true"
 	        android:layout_toLeftOf="@+id/price"
-	        android:text="Entrade de los Scones de la Chola (nuevo)"
+	        android:text=""
 	        android:textAppearance="?android:attr/textAppearanceLarge" />
 	
+	  	<TextView
+	  	    android:id="@+id/timeRemaining"
+	  	    android:layout_width="fill_parent"
+	  	    android:layout_height="wrap_content"
+	  	    android:layout_below="@id/productTitle"
+	  	    android:layout_centerHorizontal="true"
+	  	    android:layout_marginTop="10dp"
+	  	    android:gravity="center"
+	  	    android:textAppearance="?android:attr/textAppearanceMedium"
+	  	    android:textColor="@color/light_blue" />
+	    	    
 	    <ImageView
-	        android:id="@+id/imageView1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_below="@+id/productTitle"
-	        android:layout_centerHorizontal="true"
-	        android:layout_marginTop="162dp" />
-	
-	    <!--<DigitalClock
-	        android:id="@+id/digitalClock1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_above="@+id/imageView1"
-	        android:layout_marginLeft="20dp"
-	        android:layout_toRightOf="@+id/imageView1"
-	        android:text="DigitalClock" />-->
+	        android:id="@+id/productImage"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:layout_below="@id/timeRemaining"
+	        android:layout_centerHorizontal="false"
+	        android:layout_centerVertical="false"
+	        android:layout_marginTop="10dp" />
 	
 	    <TextView
 	        android:id="@+id/price"
@@ -60,30 +57,17 @@
 	        android:layout_centerHorizontal="false"
 	        android:layout_centerInParent="false"
 	        android:layout_centerVertical="false"
-	        android:text="$ 15.40"
 	        android:textAppearance="?android:attr/textAppearanceLarge" />
-	
-	    <TextView
-	        android:id="@+id/timeRemaining"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignRight="@+id/price"
-	        android:layout_below="@id/price"
-	        android:layout_marginBottom="15dp"
-	        android:paddingTop="15dp"
-	        android:text="12:34:01"
-	        android:textAppearance="?android:attr/textAppearanceMedium"
-	        android:textColor="@android:color/holo_blue_light" />
-	
-	    <TextView
-	        android:id="@+id/description"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_below="@+id/imageView1"
+
+	    <fragment
+	        android:id="@+id/loading_fragment"
+	        android:name="com.example.subastaya.LoadingFragment"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:layout_alignParentBottom="false"
 	        android:layout_centerHorizontal="true"
-	        android:layout_marginTop="19dp"
-	        android:text="El rpoducto este es muy copado, si muy copado la verdad. bocha de cosas ahce, apofjwoiceo e ndv nds njdn kdn kdnv knv kfn kfn kenkn ksdn ken kdn kdsn kndsk ndk ndks nksdn dks fnksd nksdn kdj nskdj nffddf  ."
-	        android:textAppearance="?android:attr/textAppearanceSmall" />
+	        android:layout_centerVertical="true"
+	        android:visibility="gone" />
 	    
 	</RelativeLayout>
 </ScrollView>
